tests/baselines/reference/callSignaturesShouldBeResolvedBeforeSpecialization.errors.txt
tests/cases/compiler/callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,10): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/callSignaturesShouldBeResolvedBeforeSpecialization.ts (1 errors) ====
    interface I1<T> {
        (value: T): void;
        field1: I1<boolean>;
    }
    
    function foo() {
        var test: I1<string>;
        test("expects boolean instead of string"); // should not error - "test" should not expect a boolean
        test(true); // should error - string expected
             ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
    }